--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,9 @@
 {
   "env": {
     "browser": true,
-    "node": true
   },
 
   "extends": "airbnb/legacy",
-
 
   "ecmaFeatures": {
     "arrowFunctions": true,
@@ -27,6 +25,8 @@
   },
 
   "rules": {
+    no-debugger: 0,
+    no-console: 0,
     vars-on-top: 0,
     func-names: 0,
     semi: [2, "never"],
