--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "webpack-dev-server --host 0.0.0.0 --port 3000 --inline --hot --config build/webpack.dev.config.js",
     "assets": "webpack --progress --hide-modules --config build/webpack.dev.config.js",
     "build": "webpack --progress --hide-modules --config build/webpack.prod.config.js",
-    "test": "karma start build/karma.conf.js"
+    "test": "karma start build/karma.conf.js",
+    "e2e": "mocha test/e2e/index.spec.js"
   },
   "dependencies": {
     "vue": "^1.0.16",
@@ -24,6 +25,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-runtime": "^5.8.0",
+    "chai": "^3.5.0",
+    "chai-webdriver": "^1.1.1",
     "connect-history-api-fallback": "^1.1.0",
     "css-loader": "^0.23.0",
     "eslint": "^1.10.3",
@@ -40,6 +43,7 @@
     "inject-loader": "^2.0.1",
     "jade": "^1.11.0",
     "jasmine-core": "^2.4.1",
+    "jasmine-node": "^1.14.5",
     "jquery": "^2.2.0",
     "json-loader": "^0.5.4",
     "karma": "^0.13.15",
@@ -48,12 +52,14 @@
     "karma-spec-reporter": "0.0.23",
     "karma-webpack": "^1.7.0",
     "materialize-sass-origin": "^0.97.5",
+    "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
     "phantomjs-prebuilt": "^2.1.3",
     "postcss-loader": "^0.8.1",
     "precss": "^1.4.0",
     "rimraf": "^2.5.0",
     "sass-loader": "^3.1.2",
+    "selenium-webdriver": "^2.52.0",
     "style-loader": "^0.13.0",
     "template-html-loader": "0.0.3",
     "url-loader": "^0.5.7",
